# svix_task_scheduler

./: .env  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-1d1145b4f40c2f237d9f20fe9ea3583ec0c0f14d846b19c37c6e5bc77c4d0a4e.json  query-359006f08ceaf377ffb5a0981edc0ca557c70ae8d16189cd0b9d0655db387b54.json  query-a1875f2a64e5574870ae1a96ae9e1c923a00b51825abc4bfb6f0476549240585.json  query-a6b44663ed53f15cb853d041f8e06f2ab356a18c3b3cde33a699b39ab273175d.json  query-c62344a2293991bc47060304bd0382c52c05f04de3a5a4ecf9bc0c087f6a279f.json  query-cc23f2484806502559314bcd3a444fb1e7a1cedf595ed2b9f7e2e36d771408d8.json
migrations/: 20231221123430_init.sql
src/: config.rs  error.rs  main.rs  model.rs  routes.rs  work.rs
