[package]
name = "svix_task_scheduler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
axum = "0.7.2"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
envy = "0.4.2"
rand = "0.8.5"
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["chrono", "postgres", "runtime-tokio", "uuid"] }
thiserror = "1.0.51"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
